# grc-copilot

./: .dockerignore  .env.example  Dockerfile  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml
agent/: graph.py  nodes.py
api/: __init__.py  deployment.py  events.py  main.py  task_manager.py
evals/: dataset.jsonl  run_skills_ablation.py
ingest/: chunk.py  chunk_parent.py  index.py  schema.py
rag/: dense.py  fusion.py  qa.py  rerank.py  retrieve.py  sparse.py  types.py
results/: baseline_examples.md
tests/: test_agent_graph.py  test_api.py  test_chunk_parent.py  test_deployment.py  test_index.py  test_qa.py  test_retrieval.py  test_schema.py  test_skills.py  test_skills_ablation.py
web/: app.js
