[project]
name = "grc-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jieba>=0.42.1",
    "markdownify>=1.2.3",
    "mineru[core]>=3.4.3",
    "openai>=2.44.0",
    "pymupdf4llm>=1.28.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
    "ignore:invalid escape sequence.*:SyntaxWarning:jieba.*",
]
